--- a/form.html
+++ b/form.html
@@ -1,35 +1,23 @@
-<!-- public/form.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Donor Form</title>
-  <link rel="stylesheet" href="../css/styles.css" />
+  <title>Donor Form - BDMS</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body>
+<body class="form-body">
   <div class="form-container">
     <h2>Become a Blood Donor</h2>
-    <form id="donorForm">
-      <input type="text" id="name" placeholder="Full Name" required />
-      <input type="text" id="location" placeholder="Location" required />
-      <input type="text" id="phone" placeholder="Phone Number" required />
-      <select id="blood" required>
-        <option value="">Select Blood Group</option>
-        <option value="A+">A+</option>
-        <option value="A-">A-</option>
-        <option value="B+">B+</option>
-        <option value="B-">B-</option>
-        <option value="O+">O+</option>
-        <option value="O-">O-</option>
-        <option value="AB+">AB+</option>
-        <option value="AB-">AB-</option>
-      </select>
-      <input type="hidden" id="adminSlug" value="" />
+    <form id="donorForm" class="form">
+      <input type="text" name="name" placeholder="Full Name" required />
+      <input type="text" name="blood" placeholder="Blood Group (e.g. A+)" required />
+      <input type="text" name="district" placeholder="District" required />
+      <input type="text" name="phone" placeholder="Phone Number" required />
       <button type="submit">Submit</button>
     </form>
+    <p class="form-note">Your request will be sent to the respective admin and appear once approved.</p>
   </div>
-
-  <script type="module" src="../js/form.js"></script>
+  <script type="module" src="js/form.js"></script>
 </body>
 </html>
