--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Blood Donor Management</title>
+  <title>Donor List - BDMS</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body>
-  <div class="form-container">
-    <h2>Welcome to Blood Donor Management System</h2>
-    <p>This platform helps manage and view blood donors efficiently.</p>
-    <div style="display: flex; flex-direction: column; gap: 1rem; margin-top: 2rem;">
-      <a href="login.html"><button>Admin Login</button></a>
-      <a href="register.html"><button>Admin Register</button></a>
-    </div>
+<body class="index-body">
+  <div class="index-container">
+    <h1>Available Blood Donors</h1>
+    <div id="donorList" class="donor-list"></div>
+    <p class="footer-note">List is managed by the admin of this donor page.</p>
   </div>
+  <script type="module" src="js/index.js"></script>
 </body>
 </html>
