--- a/login.html
+++ b/login.html
@@ -1,23 +1,21 @@
-<!-- public/login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Login - Blood Donor App</title>
-  <link rel="stylesheet" href="../css/styles.css" />
+  <title>Admin Login - BDMS</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body>
-  <div class="form-container">
+<body class="auth-body">
+  <div class="auth-container">
     <h2>Admin Login</h2>
-    <form id="loginForm">
-      <input type="email" id="loginEmail" placeholder="Email" required />
-      <input type="password" id="loginPassword" placeholder="Password" required />
+    <form id="loginForm" class="auth-form">
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="register.html">Register here</a></p>
   </div>
-
-  <script type="module" src="../js/auth.js"></script>
+  <script type="module" src="js/login.js"></script>
 </body>
 </html>
